camel-dashboard/ocp-maven-plugin/src/main/resources/kustomize/my-camel/base/http/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: integrator
  #namespace: my-sandbox
  # labels:
  #   app: my-camel-integrator
#  annotations:
#    service.beta.openshift.io/serving-cert-secret-name: my-camel-integrator-reencrypt-certs
spec:
  ports:
    - name: my-tcp
      protocol: TCP
      port: 8080      
      targetPort: 8080      
  type: ClusterIP
  sessionAffinity: None
  selector:
    app: integrator
