camel-dashboard/ocp-maven-plugin/src/main/resources/kustomize/my-camel/base/http/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: integrator
  #namespace: my-sandbox
  # labels:
  #   app: my-camel-integrator
spec:
  host: integrator
  to:
    kind: Service
    name: integrator
    weight: 100
  port:
    targetPort: my-tcp
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  wildcardPolicy: None
